updated analysis file

--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -331,7 +331,7 @@
       "source": [
         "# Filter DataFrame and create new DF that retrieves all the rows where a review was written as part of the Vine program\n",
         "paid_vine_df = helpful_votes_df.filter(helpful_votes_df[\"vine\"] == \"Y\")\n",
-        "paid_vine_df.show(10)"
+        "paid_vine_df.show(10)\n"
       ],
       "execution_count": 9,
       "outputs": [
@@ -613,7 +613,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sFnWMVTliTK7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sFnWMVTliTK7",
+        "outputId": "e533a41d-e6b9-4a35-e94e-b0c9244f177e"
+      },
+      "source": [
+        "paid_vine_total = paid_vine_df.count()\n",
+        "paid_vine_total"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "47"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oh5BEzuhkv1D",
+        "outputId": "076671bd-89b1-4af4-e542-7e70e29a46ab"
+      },
+      "source": [
+        "unpaid_vine_total = unpaid_vine_df.count()\n",
+        "unpaid_vine_total"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8362"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_wY1JKwnk0vZ"
       },
       "source": [
         ""
