addlt anlaysis added

--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -671,7 +671,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_wY1JKwnk0vZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_wY1JKwnk0vZ",
+        "outputId": "1d1e50f8-a775-4fcd-ed31-c5cc2c8ed82b"
+      },
+      "source": [
+        "paid_per = (paid_vine_total / total_helpful_reviews) * 100\n",
+        "paid_per"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5589249613509335"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wGul1Rsinvgl"
       },
       "source": [
         ""
